--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^14.2.1",
+    "fuse.js": "^7.1.0",
     "vue": "^3.5.17"
   },
   "devDependencies": {
